--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+# === Quant-ML-BTC dependencies ===
 pandas==2.2.2
 numpy==1.26.4
 pyyaml==6.0.1
 scikit-learn==1.4.2
 xgboost==2.0.3
 matplotlib==3.8.4
+requests==2.32.3
+xgboost==2.1.1
